Remove the fade and stop the scrollbar from appearing

--- a/more-about.css
+++ b/more-about.css
@@ -55,24 +55,6 @@
 .scroller-mask {
   height: 220px;
   overflow: hidden;
-  position: relative;
-}
-
-.scroller-mask:before {
-  display: none;
-  content: '';
-  position: absolute;
-  width: 30px;
-  height: 100%;
-  top: 0;
-  right: 0;
-  z-index: 1;
-  opacity: 0.6;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,eeeeee+100&0+0,1+100 */
-background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(238,238,238,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(238,238,238,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(238,238,238,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#eeeeee',GradientType=1 ); /* IE6-9 */
 }
 
 .scroller-horizontal {
